Fixed background stretching. Added conditional rendering on filter list

--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,4 @@
 
 .main-container {
     padding: 4em;
-    height: calc(100% - 56px);
 }
